<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_user_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.NewUserFragment">

    <TextView
        android:id="@+id/full_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name_label"
        app:layout_constraintBottom_toTopOf="@+id/cc_number_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/driver_licence_number_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0" />

    <TextView
        android:id="@+id/full_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rafael Gomes Nobre"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/cc_number_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/driver_licence_number_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.15" />

    <TextView
        android:id="@+id/cc_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cc_number_label"
        app:layout_constraintBottom_toTopOf="@+id/driver_licence_number_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/driver_licence_number_label"
        app:layout_constraintTop_toBottomOf="@+id/full_name_label"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0" />

    <TextView
        android:id="@+id/cc_number_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="123456789"
        app:layout_constraintBottom_toTopOf="@+id/driver_licence_number_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/driver_licence_number_label"
        app:layout_constraintTop_toBottomOf="@+id/full_name_value"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.15" />

    <TextView
        android:id="@+id/driver_licence_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_licence_number_label"
        app:layout_constraintBottom_toTopOf="@+id/email_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cc_number_label"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.07" />

    <TextView
        android:id="@+id/driver_licence_number_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="987654321"
        app:layout_constraintBottom_toTopOf="@+id/email_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/driver_licence_number_label"
        app:layout_constraintTop_toBottomOf="@+id/cc_number_value"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.15" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        app:layout_constraintBottom_toTopOf="@+id/phone_number_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/driver_licence_number_label"
        app:layout_constraintTop_toBottomOf="@+id/driver_licence_number_label"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0" />

    <TextView
        android:id="@+id/email_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="rafael.gomes.nobre@gmail.com"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/phone_number_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/driver_licence_number_label"
        app:layout_constraintTop_toBottomOf="@+id/driver_licence_number_value"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.15" />

    <TextView
        android:id="@+id/phone_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_label"
        app:layout_constraintBottom_toTopOf="@+id/new_user_info_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/driver_licence_number_label"
        app:layout_constraintTop_toBottomOf="@+id/email_label"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0" />

    <TextView
        android:id="@+id/phone_number_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="933417044"
        app:layout_constraintBottom_toTopOf="@+id/new_user_info_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/driver_licence_number_label"
        app:layout_constraintTop_toBottomOf="@+id/email_value"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.15" />

    <TextView
        android:id="@+id/new_user_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:textAlignment="center"
        android:textSize="15sp"
        android:text="@string/new_user_info_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints="@string/username_input"
        android:hint="@string/username_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_user_info_label"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="@string/password_input"
        android:hint="@string/password_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_input"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        app:layout_constraintVertical_bias="0.15" />
</androidx.constraintlayout.widget.ConstraintLayout>