<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.infraction_detail.InfractionDetailActivity"
    android:orientation="vertical">

    <include layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail_licence_plate_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_licence_plate_label"
                android:paddingTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/detail_licence_plate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fill"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail_radar_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_radar_label"
                android:paddingTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/detail_radar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fill"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail_date_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_date_time_label"
                android:paddingTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/detail_date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fill"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_price_label"
                android:paddingTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/detail_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fill"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail_payment_date_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_payment_date_time_label"
                android:paddingTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/detail_payment_date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fill"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"
                />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/infraction_frag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/pay_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_button_text"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"/>
    </LinearLayout>

</LinearLayout>