<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.infraction_detail.SpeedInfractionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail_vehicle_speed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_vehicle_speed"
                android:paddingTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/detail_vehicle_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fill"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail_speed_limit_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_speed_limit"
                android:paddingTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/detail_speed_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fill"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail_direction_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_direction"
                android:paddingTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/detail_direction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fill"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail_chasing_vehicle_speed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_chasing_vehicle_speed"
                android:paddingTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/detail_chasing_vehicle_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fill"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>